--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,10 @@ dependencies {
     implementation 'org.bitcoinj:bitcoinj-core:0.14.3'
 
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
+
+    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
