--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,6 +163,7 @@ dependencies {
 
     implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.daimajia.swipelayout:library:1.2.0'
 
     implementation 'com.android.installreferrer:installreferrer:1.1.1'
 }
