--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
 
         <activity
             android:name="com.ngse.ui.NewMainActivity"
-            android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -64,6 +63,9 @@
             android:screenOrientation="portrait"
             android:theme="@style/ActivityTheme" />
         <activity android:name="com.ngse.ui.CreateAccountActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityTheme" />
+        <activity android:name="com.ngse.ui.FragmentContainerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/ActivityTheme" />
         <activity android:name="com.jakewharton.processphoenix.ProcessPhoenix" />
